--- a/CSSAssignment1.html
+++ b/CSSAssignment1.html
@@ -34,7 +34,7 @@
 			<p id="p4">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 			<p id="p6">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 			<br><br>
-			<p id="p5">Made 25 January 2018 <br> by Myself</p>
+			<p id="p5">Made 25 January 2018 <br> by Myself.</p>
 			
 		</div>
 	</body>
